# wireguard-vanity-address

./: Cargo.toml
.github/workflows/: release.yml  rust.yml
benches/: keygen.rs
src/: bin.rs  lib.rs
