[package]
name = "wireguard-vanity-address"
version = "0.5.0"
edition = "2018"
authors = ["Brian Warner <warner@lothar.com>"]
description = "Find Wireguard VPN keypairs with a specific readable string"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
documentation = "https://docs.rs/wireguard-vanity-address"
homepage = "https://github.com/warner/wireguard-vanity-address"
repository = "https://github.com/warner/wireguard-vanity-address"
exclude = [
    "**/.gitignore",
    ".gitignore",
]

[badges]
travis-ci = { repository = "warner/wireguard-vanity-address" }

[dependencies]
clap = "4.5.20"
rayon = "1.10"
base64 = "0.22"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "wireguard_vanity_lib"
path = "src/lib.rs"

[[bin]]
name = "wireguard-vanity-address"
path = "src/bin.rs"

[[bench]]
name = "keygen"
harness = false
